JAM-28 Fix for odd spacing as resizing page titlebar, as well as adding default description to config.

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -1634,8 +1634,8 @@ Author:	Janxcode
 
 	.jx-page-titlebar .jx-page-titlebar-items .jx-breadcrumb span.current {
 		margin-top:20px !important;
-		font-size:14px !important;
-		float:left !important;
+		font-size:14px !important;	
+		// float:left !important;
 	}
 
 	.jx-page-titlebar .jx-page-titlebar-items .jx-breadcrumb a {
@@ -2534,7 +2534,7 @@ Author:	Janxcode
 	.jx-page-titlebar .jx-page-titlebar-items .jx-breadcrumb span.current {
 		margin-top:15px !important;
 		font-size:12px !important;
-		float:left !important;
+		// float:left !important;
 	}
 
 	.jx-page-titlebar .jx-page-titlebar-items .jx-breadcrumb a {
